--- a/StorySkeleton/MainWindow.xaml
+++ b/StorySkeleton/MainWindow.xaml
@@ -7,6 +7,37 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Ribbon x:Name="MainRibbon"  SelectedIndex="0">
+            <Ribbon.QuickAccessToolBar>
+                <RibbonQuickAccessToolBar>
+                    <!--RibbonButton x:Name ="Save" SmallImageSource="Images\save.png" /-->
+                </RibbonQuickAccessToolBar>
+            </Ribbon.QuickAccessToolBar>
+            <!-- Application Menu, located at the left-hand side (down arrow) -->
+            <Ribbon.ApplicationMenu>
+                <RibbonApplicationMenu KeyTip="F">
+                    <RibbonApplicationMenuItem Header="Options" />
+                    <RibbonApplicationMenuItem Header="Exit" />
+                </RibbonApplicationMenu>
+            </Ribbon.ApplicationMenu>
+            <RibbonTab Header="Characters" KeyTip="C">
+            </RibbonTab>
+            <RibbonTab Header="Plot" KeyTip="P">
+            </RibbonTab>
+            <RibbonTab Header="Trends" KeyTip="T">
+            </RibbonTab>
+        </Ribbon>
+        <StackPanel Grid.Row="1">
+            <TextBlock>Tab1 - Characters</TextBlock>
+            <TextBlock>Starting Cast w/ mini-overview of selected charater</TextBlock>
+            <TextBlock>Detailed One Character View - edit properties</TextBlock>
+            <TextBlock>New Character / Random Character Generator</TextBlock>
+            <TextBlock>Tab2 - Events</TextBlock>
+            <TextBlock>Tab3 - Trends</TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
