--- a/StorySkeleton/Views/PlotOverview.xaml
+++ b/StorySkeleton/Views/PlotOverview.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="StorySkeleton.Views.Incidents.PlotOverview"
+﻿<UserControl x:Class="StorySkeleton.Views.PlotOverview"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:StorySkeleton.Views.Incidents"
+             xmlns:local="clr-namespace:StorySkeleton.Views"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
