--- a/StorySkeleton/Views/PlotOverview.xaml
+++ b/StorySkeleton/Views/PlotOverview.xaml
@@ -4,41 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:StorySkeleton.Views"
+             xmlns:vm="clr-namespace:StorySkeleton.ViewModels"
+             xmlns:iv="clr-namespace:StorySkeleton.Views.Incidents"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
-        <DataTemplate x:Key="FormatCharacter">
-            <TextBlock Margin="5,0,0,0" Text="{Binding Name}"/>
-        </DataTemplate>
-        <DataTemplate x:Key="FormatRole">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding RoleName}"
-                           FontWeight="DemiBold"/>
-                <ItemsControl Margin="10,0,0,0"
-                    ItemsSource="{Binding Participants}" 
-                    ItemTemplate="{StaticResource FormatCharacter}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-            </StackPanel>
-        </DataTemplate>
-        <DataTemplate x:Key="FormatIncident">
-            <StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{Binding Name}"
-                           FontWeight="Bold"/>
-                    <TextBlock Margin="5,0,0,0" 
-                               FontStyle="Italic"
-                               FontWeight="Bold"
-                               Text="{Binding TheTone, StringFormat='[{0}]'}"/>
-                </StackPanel>
-                <ItemsControl Margin="20,0,0,10"
-                    ItemsSource="{Binding AllParticipantRoles}"
-                    ItemTemplate="{StaticResource FormatRole}"/>
-            </StackPanel>
+        <UserControl.Resources>
+        <DataTemplate DataType="{x:Type vm:IncidentVM}">
+            <iv:IncidentView/>
         </DataTemplate>
     </UserControl.Resources>
     <Grid>
@@ -53,8 +25,7 @@
         <TextBlock Grid.Row="2" Margin="5" FontSize="15" TextAlignment="Center">Sequence of Events</TextBlock>
         <ScrollViewer Grid.Row="3" Margin="30,0,30,5">
             <ItemsControl FontSize="12"
-                    ItemsSource="{Binding AllIncidents}" 
-                    ItemTemplate="{StaticResource FormatIncident}"/>
+                    ItemsSource="{Binding AllIncidents}" />
         </ScrollViewer>
     </Grid>
 </UserControl>
