--- a/StorySkeleton/Views/Trends/RelationshipTrendView.xaml
+++ b/StorySkeleton/Views/Trends/RelationshipTrendView.xaml
@@ -27,8 +27,10 @@
                           Grid.Column="3" />
             </Grid>
             <DockPanel>
-                <Canvas Name="theGraphCanvas">
-                    <ContentPresenter Content="{Binding GraphCanvas}"/>
+                <Canvas Name="theGraphContainer" MinHeight="200">
+                    <ContentPresenter Content="{Binding GraphCanvas}"
+                                      Height="{Binding Path=ActualHeight, ElementName=theGraphContainer}"                                      
+                                      Width="{Binding Path=ActualWidth, ElementName=theGraphContainer}"/>
                 </Canvas>
             </DockPanel>
         </StackPanel>
