--- a/StorySkeleton/Views/Incidents/IncidentView.xaml
+++ b/StorySkeleton/Views/Incidents/IncidentView.xaml
@@ -34,7 +34,8 @@
     <Grid>
         <StackPanel Margin="0,10,0,0">
             <TextBlock Text="{Binding Name}"
-                           FontWeight="Bold"/>
+                       FontSize="14"
+                       FontWeight="Bold"/>
             <StackPanel Orientation="Horizontal">
                 <Ellipse Margin="20,0,0,0" 
                          Height="11"
